--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -1,3 +1,7 @@
+---
+typora-root-url: resources
+---
+
 力扣刷题记录
 
 Wrote by  @Greennbananaaa
@@ -3277,6 +3281,101 @@ public int[] singleNumber(int[] nums) {
         } 
     }
     return new int[]{x,bit^x};
+}
+```
+
+
+
+## [718. 最长重复子数组](https://leetcode-cn.com/problems/maximum-length-of-repeated-subarray/)
+
+给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
+
+示例：
+
+```
+输入：
+A: [1,2,3,2,1]
+B: [3,2,1,4,7]
+输出：3
+解释：
+长度最长的公共子数组是 [3, 2, 1] 。
+```
+
+提示：
+
+`1 <= len(A), len(B) <= 1000`
+`0 <= A[i], B[i] < 100`
+
+**解答：**
+
+1.暴力法：
+
+- 对于每个A中的元素a，遍历B看是否有元素b和它相同
+- **a**与b相同则比较a++与b++的元素，len++，如果a++ b++也相同则继续向后比较，直到遇到不相同的元素的时候，res = len>res?len:res，下一次遍历比较**a**与b++
+- a与b不同，比较a与b++
+- 两个for循环+一个while
+
+2.动态规划dp：
+
+- A[a]与B[b]如果相同，则以ab结尾的公共子串的长度，是以A[a-1]B[b-1]结尾的公共子串的长度+1，如果A[a-1]不等于B[b-1]，则ab结尾的公共子串的长度为1，记录最长的公共子串长度
+
+- 令dp[i+1] [j+1]表示以A[i]与B[j]结尾的公共子串的长度，则dp[i+1] [j+1] = dp[i] [j]+1，dp大小为[m+1] [n+1],第一行第一列均为0，遍历时从11开始
+
+- A[i]B[j]不等的话 dp[i+1] [j+1] = 0
+
+  ```java
+  //伪代码：
+  m = A.length
+  n = B.length
+  dp = int[m+1][n+1]
+  for(int i=0;i<m;i++){
+  	for(int j=0;j<n;j++){
+  		if(A[i]==B[j]){
+  			dp[i+1][j+1] = dp[i][j]+1;
+  			res = dp[i+1][j+1]>res? dp[i+1][j+1]:res;
+  		}
+  		else dp[i+1][j+1]=0;	
+  	}
+  }
+  return res;
+  ```
+
+<img src="/718-2.png" alt="718-2" style="zoom:75%;" />
+
+3.滑动窗口：
+
+![718](\resources\718.gif)
+
+```java
+class Solution {
+    public int findLength(int[] A, int[] B) {
+        int n = A.length, m = B.length;
+        int ret = 0;
+        for (int i = 0; i < n; i++) {
+            int len = Math.min(m, n - i);
+            int maxlen = maxLength(A, B, i, 0, len);
+            ret = Math.max(ret, maxlen);
+        }
+        for (int i = 0; i < m; i++) {
+            int len = Math.min(n, m - i);
+            int maxlen = maxLength(A, B, 0, i, len);
+            ret = Math.max(ret, maxlen);
+        }
+        return ret;
+    }
+
+    public int maxLength(int[] A, int[] B, int addA, int addB, int len) {
+        int ret = 0, k = 0;
+        for (int i = 0; i < len; i++) {
+            if (A[addA + i] == B[addB + i]) {
+                k++;
+            } else {
+                k = 0;
+            }
+            ret = Math.max(ret, k);
+        }
+        return ret;
+    }
 }
 ```
 
