--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3009,6 +3009,70 @@ int lastresult[][] = new int[num][];
 
 
 
+## [108. 将有序数组转换为二叉搜索树](https://leetcode-cn.com/problems/convert-sorted-array-to-binary-search-tree/)
+
+将一个按照升序排列的有序数组，转换为一棵高度平衡二叉搜索树。
+
+本题中，一个高度平衡二叉树是指一个二叉树每个节点 的左右两个子树的高度差的绝对值不超过 1。
+
+示例:
+
+给定有序数组: [-10,-3,0,5,9],
+
+一个可能的答案是：[0,-3,9,-10,null,5]，它可以表示下面这个高度平衡二叉搜索树：
+
+```
+      0
+     / \
+   -3   9
+   /   /
+ -10  5
+```
+
+**解答:**
+
+1. 中序遍历，总选择序列中间的数作为下一个节点，如[-10,-3,0,5,9]
+2. 将0作为根节点，递归序列nums[0:1]，nums[3:4]分别作为根节点的左右节点
+3. 返回 left = nums[(0+1)/2] = nums[0] = -10，left 作为根节点，再递归序列：nums[0:-1]，nums[1:1]
+4. 返回 right = nums[(3+4)/2] = nums[3] = 5，right 作为根节点，再递归序列：nums[3:2]，nums[4:4]
+5. 当i>j时,返回null
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public TreeNode sortedArrayToBST(int[] nums) {
+        TreeNode res = gettree(nums,0,nums.length-1); //递归
+        return res;
+
+    }
+
+    TreeNode gettree(int[] nums,int i, int j){
+        if(i>j) return null;
+        else {
+            TreeNode node = new TreeNode(nums[(i+j)/2]);//根节点
+            node.left = gettree(nums,i,(i+j)/2-1); //左节点
+            node.right = gettree(nums,(i+j)/2+1,j); //右节点
+            return node;
+        }
+    }
+
+}
+```
+
+
+
+
+
+
+
 ## 136.只出现一次的数字
 
 给定一个非空整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
