--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -1174,6 +1174,45 @@ class Solution {
 }
 ```
 
+## [面试题 16.11. 跳水板](https://leetcode-cn.com/problems/diving-board-lcci/)
+
+你正在使用一堆木板建造跳水板。有两种类型的木板，其中长度较短的木板长度为shorter，长度较长的木板长度为longer。你必须正好使用k块木板。编写一个方法，生成跳水板所有可能的长度。
+
+返回的长度需要从小到大排列。
+
+示例：
+
+```
+输入：
+shorter = 1
+longer = 2
+k = 3
+输出： {3,4,5,6}
+```
+
+提示：
+
+`0 < shorter <= longer`
+`0 <= k <= 100000`
+
+**解答：** 返回数组长度=k+1，特殊情况：k=0；shorter==longer
+
+```java
+class Solution {
+    public int[] divingBoard(int shorter, int longer, int k) {
+        if(k==0) return new int[0];
+        if(shorter==longer) return new int[]{shorter * k}; //1 1 100 返回[100]
+
+        int[] res = new int[k+1];
+        for(int i=0;i<=k;i++){
+            // L S k=3 返回[0*L+3*S,1*L+2*S,…] 长度k+1
+            res[i] = i*longer + (k-i)*shorter;
+        }
+        return res;
+    }
+}
+```
+
 
 
 ## [面试题17. 打印从1到最大的n位数](https://leetcode-cn.com/problems/da-yin-cong-1dao-zui-da-de-nwei-shu-lcof/)
@@ -2898,6 +2937,291 @@ public class Codec {
 // codec.deserialize(codec.serialize(root));
 ```
 
+## [剑指 Offer 38. 字符串的排列](https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/)
+
+输入一个字符串，打印出该字符串中字符的所有排列。
+
+你可以以任意顺序返回这个字符串数组，但里面不能有重复元素。 
+
+**示例:**
+
+```
+输入：s = "abc"
+输出：["abc","acb","bac","bca","cab","cba"]
+```
+
+**限制：**
+
+`1 <= s 的长度 <= 8`
+
+**解答：**回溯法+重复字符删除（即剪枝） $o(N) = N*N-1*N-2*…*2*1$
+
+- 字符串转字符数组，数组长度n
+
+- 固定第一位，x=0，第二位遍历[1,n-1]
+
+- 固定第二位，第三位遍历[2,n-1]
+
+- 固定第x位，第x+1位遍历[x+1,n-1]
+
+- 固定到第n-1位，返回字符串当前序列
+
+- 回溯，退回n-2位，继续遍历n-1位
+
+- 回溯，退回n-3位，继续遍历n-2位
+
+- 回溯至第一位，x=1，继续遍历第二位
+
+- 判断是否是重复元素：建立set，判断set.contains(arr[i])；先对数组进行排序，如果arr[i]==arr[i-1]，为重复元素
+
+  ```java
+  class Solution {
+      LinkedList<String> res = new LinkedList<>();  //全局变量存储res
+      char[] arr;  //全局变量存储数组
+  
+      public String[] permutation(String s) {
+          arr = s.toCharArray(); 
+          dfs(0);
+          return res.toArray(new String[res.size()]);
+  
+      }
+  
+      //深度遍历 x为当前固定的位数
+      void dfs(int x){
+          //x==arr.length-1 说明递归到最后一位了，则将当前数组转字符串加入res
+          if(x==arr.length-1){
+              res.add(String.valueOf(arr));
+              return;
+          }
+          HashSet<Character> set = new HashSet<>();
+          for(int i=x;i<arr.length;i++){    
+              //判断在当前固定的位数上，是否有重复元素
+              if(set.contains(arr[i])) continue; 
+              set.add(arr[i]);
+              
+              swap(i,x);//交换 arr[i] 与 arr[x]
+              dfs(x+1);
+              swap(i,x);//回溯 重置交换
+          }
+      }
+  	//交换数组arr[a] arr[b]
+      void swap(int a,int b){
+          char temp = arr[a];
+          arr[a] = arr[b];
+          arr[b] = temp;
+      }
+  }
+  ```
+
+  
+
+## [剑指 Offer 40. 最小的k个数](https://leetcode-cn.com/problems/zui-xiao-de-kge-shu-lcof/)
+
+输入整数数组 arr ，找出其中最小的 k 个数。例如，输入4、5、1、6、2、7、3、8这8个数字，则最小的4个数字是1、2、3、4。
+
+示例 1：
+
+```
+输入：arr = [3,2,1], k = 2
+输出：[1,2] 或者 [2,1]
+```
+
+示例 2：
+
+```
+输入：arr = [0,1,2,1], k = 1
+输出：[0]
+```
+
+限制：
+
+    0 <= k <= arr.length <= 10000
+    0 <= arr[i] <= 10000
+
+
+
+**解答：**<u>Top k</u> 问题：快排 / 大根堆（输出前 K 小）
+
+1. 快排：o(n) 每次快排，都是找到该元素i在当前数组中的位置，比它小的在左边，比它大的在右边，如果k<i，继续切分(0,i-1)，如果k<i，切分(i+1,len)
+
+   ```java
+   class Solution {
+       public int[] getLeastNumbers(int[] arr, int k) {
+           if (k == 0 || arr.length == 0) {
+               return new int[0];
+           }
+           // 最后一个参数表示我们要找的是下标为k-1的数
+           return quickSearch(arr, 0, arr.length - 1, k - 1);
+       }
+   
+       private int[] quickSearch(int[] nums, int lo, int hi, int k) {
+           // 每快排切分1次，找到排序后下标为j的元素，如果j恰好等于k就返回j以及j左边所有的数；
+           int j = partition(nums, lo, hi);
+           if (j == k) {
+               return Arrays.copyOf(nums, j + 1);
+           }
+           // 否则根据下标j与k的大小关系来决定继续切分左段还是右段。
+           return j > k? quickSearch(nums, lo, j - 1, k): quickSearch(nums, j + 1, hi, k);
+       }
+   
+       // 快排切分，返回下标j，使得比nums[j]小的数都在j的左边，比nums[j]大的数都在j的右边。
+       private int partition(int[] nums, int lo, int hi) {
+           int v = nums[lo];
+           int i = lo, j = hi + 1;
+           while (true) {
+               while (++i <= hi && nums[i] < v);
+               while (--j >= lo && nums[j] > v);
+               if (i >= j) {
+                   break;
+               }
+               int t = nums[j];
+               nums[j] = nums[i];
+               nums[i] = t;
+           }
+           nums[lo] = nums[j];
+           nums[j] = v;
+           return j;
+       }
+   }
+   ```
+
+2. 大根堆(前 K 小) / 小根堆（前 K 大),Java中有现成的 PriorityQueue，实现起来最简单：O(NlogK)O(NlogK)O(NlogK)
+
+   ```java
+   // 保持堆的大小为K，然后遍历数组中的数字，遍历的时候做如下判断：
+   // 1. 若目前堆的大小小于K，将当前数字放入堆中。
+   // 2. 否则判断当前数字与大根堆堆顶元素的大小关系，如果当前数字比大根堆堆顶还大，这个数就直接跳过；
+   //    反之如果当前数字比大根堆堆顶小，先poll掉堆顶，再将该数字放入堆中。
+   class Solution {
+       public int[] getLeastNumbers(int[] arr, int k) {
+           if (k == 0 || arr.length == 0) {
+               return new int[0];
+           }
+           // 默认是小根堆，实现大根堆需要重写一下比较器。
+           Queue<Integer> pq = new PriorityQueue<>((v1, v2) -> v2 - v1);
+           for (int num: arr) {
+               if (pq.size() < k) {
+                   pq.offer(num);
+               } else if (num < pq.peek()) {
+                   pq.poll();
+                   pq.offer(num);
+               }
+           }
+           
+           // 返回堆中的元素
+           int[] res = new int[pq.size()];
+           int idx = 0;
+           for(int num: pq) {
+               res[idx++] = num;
+           }
+           return res;
+       }
+   }
+   ```
+
+
+
+
+## [剑指 Offer 41. 数据流中的中位数](https://leetcode-cn.com/problems/shu-ju-liu-zhong-de-zhong-wei-shu-lcof/)
+
+#### 
+
+如何得到一个数据流中的中位数？如果从数据流中读出奇数个数值，那么中位数就是所有数值排序之后位于中间的数值。如果从数据流中读出偶数个数值，那么中位数就是所有数值排序之后中间两个数的平均值。
+
+例如，
+
+[2,3,4] 的中位数是 3
+
+[2,3] 的中位数是 (2 + 3) / 2 = 2.5
+
+设计一个支持以下两种操作的数据结构：
+
+- void addNum(int num) - 从数据流中添加一个整数到数据结构中。
+- double findMedian() - 返回目前所有元素的中位数。
+
+**示例 1：**
+
+```
+输入：
+["MedianFinder","addNum","addNum","findMedian","addNum","findMedian"]
+[[],[1],[2],[],[3],[]]
+输出：[null,null,null,1.50000,null,2.00000]
+```
+
+**示例 2：**
+
+```
+输入：
+["MedianFinder","addNum","findMedian","addNum","findMedian"]
+[[],[2],[],[3],[]]
+输出：[null,null,2.00000,null,2.50000]
+```
+
+**解答：**<u>大顶堆+小顶堆</u>
+
+Java PriorityQueue <u>优先队列</u> 队顶始终是当前队列的最小值
+
+小顶堆 ：`Queue<Integer> A = new PriorityQueue<Integer>();` 出队时poll的是最小值
+
+大顶堆 ：`Queue<Integer> B = new PriorityQueue<>((x, y) -> (y - x));` 出队时poll的是最大值
+
+方法：
+
+入队：`A.offer(xxx)`
+
+出队：`A.poll()` 
+
+取队顶：`A.peek()`
+
+PriorityQueue并不是线程安全队列，因为offer/poll都没有对队列进行锁定，每次仅会找出最小的元素将其排在第一位，而不会排序
+
+- 分为大顶堆A 和 小顶堆B，大顶堆A存[5 4 3 2 1]，小顶堆B存[6,7,8,9]
+- A.len 与 B.len 相等时，将B及add(num)中最小的值给A，A.len++
+- A.len > B.len 时，将A及add(num)中最小的值给B，B.len++
+- 相等为偶数，返回两个队顶的均值；不相等为奇数，由于A.len>=B.len，奇数时中位数总在A的队顶
+
+```java
+class MedianFinder {
+
+    /** initialize your data structure here. */
+    Queue<Integer> A = new PriorityQueue<>((x,y)->(y-x));  //大顶堆 保存 54321 出队返回最大值
+    Queue<Integer> B = new PriorityQueue<>();  //小顶堆 保存 6789 出队返回最小值
+
+    public MedianFinder() {
+
+    }
+    
+    public void addNum(int num) {
+        //始终保持A.len>=B.len 并且 A存较小的数 B存较大的数
+        if(A.size()==B.size()){
+            //AB长度相等时
+            //将B及num中最小的值给A  A.len++
+            B.offer(num);
+            A.offer(B.poll());  
+        }else{
+            //(A.len-B.len)==1时
+            //将A及num中最大的值给B
+            A.offer(num);
+            B.offer(A.poll());
+        }
+    }
+    
+    public double findMedian() {
+        //相等为偶数 返回两个队顶的均值 不相等为奇数 由于A.len>=B.len 奇数时中位数总在A的队顶
+        return A.size()==B.size()? (A.peek()+B.peek())/2.0:A.peek();   
+    }
+}
+
+/**
+ * Your MedianFinder object will be instantiated and called as such:
+ * MedianFinder obj = new MedianFinder();
+ * obj.addNum(num);
+ * double param_2 = obj.findMedian();
+ */
+```
+
+注意 返回类型为double，除以2时要除2.0
+
 
 
 ## 57.和为s的两个数字
@@ -3069,9 +3393,102 @@ class Solution {
 
 
 
+## [112. 路径总和](https://leetcode-cn.com/problems/path-sum/)
 
+给定一个二叉树和一个目标和，判断该树中是否存在根节点到叶子节点的路径，这条路径上所有节点值相加等于目标和。
 
+说明: 叶子节点是指没有子节点的节点。
 
+示例: 
+给定如下二叉树，以及目标和 sum = 22，
+
+              5
+             / \
+            4   8
+           /   / \
+          11  13  4
+         /  \      \
+        7    2      1
+
+返回 true, 因为存在目标和为 22 的根节点到叶子节点的路径 5->4->11->2。
+
+**解答：**
+
+1. DFS递归：o(N)，深度优先遍历
+
+   - 当左右子节点都为null（叶节点）且count==sum，返回true
+   - 空节点时返回false，说明上一个节点（可能是叶节点也可以是中间节点）的count!=sum
+   - 当有一条路径为true时，返回true
+
+   ```java
+   /**
+    * Definition for a binary tree node.
+    * public class TreeNode {
+    *     int val;
+    *     TreeNode left;
+    *     TreeNode right;
+    *     TreeNode(int x) { val = x; }
+    * }
+    */
+   class Solution {
+       public boolean hasPathSum(TreeNode root, int sum) {
+          // if(root==null) return false;
+           return findroad(root,0,sum);
+       }
+   
+       boolean findroad(TreeNode root,int count,int sum){
+           if(root==null) return false;
+           
+           count+=root.val;     
+           if(root.left==null&&root.right==null&&count==sum) return true; 
+           
+           return findroad(root.left,count,sum)||findroad(root.right,count,sum);      
+       }
+   }
+   ```
+
+2. BFS+队列，o(n)，广度优先+用两个队列分别存储当前层的树节点和每个节点所在路径的count
+
+   - 当前节点进队列1，计算count进队列2
+   - 节点出队列1，count出队列2，左右节点进队列1，加上左右节点的值再进队列2
+   - 如果出队列的节点是叶子节点，且对应count!=sum，则countinut，下一个节点继续出队列
+   - 如果出队列的节点是叶子节点，且对应count==sum，则返回true
+   - 如果队列空了，返回false
+
+   ```java
+   class Solution {
+       public boolean hasPathSum(TreeNode root, int sum) {
+           if (root == null) {
+               return false;
+           }
+           Queue<TreeNode> queNode = new LinkedList<TreeNode>();  //队列1
+           Queue<Integer> queVal = new LinkedList<Integer>();  //队列2
+           queNode.offer(root); //根节点进队列1
+           queVal.offer(root.val); //根节点的值进队列2
+           while (!queNode.isEmpty()) {  //判断队列是否为空
+               TreeNode now = queNode.poll(); //出队列1
+               int temp = queVal.poll();  //出队列2
+               if (now.left == null && now.right == null) { //判断是否为叶节点
+                   if (temp == sum) {  //判断该路径count==sum?true:continue;
+                       return true;
+                   }
+                   continue;
+               }
+               if (now.left != null) {  //左节点不为空 左节点进队列
+                   queNode.offer(now.left);
+                   queVal.offer(now.left.val + temp);
+               }
+               if (now.right != null) {  //右节点不为空 右节点进队列
+                   queNode.offer(now.right);
+                   queVal.offer(now.right.val + temp);
+               }
+           }
+           return false;
+       }
+   }
+   ```
+
+   
 
 ## 136.只出现一次的数字
 
