--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3224,6 +3224,116 @@ class MedianFinder {
 
 
 
+## [剑指 Offer 42. 连续子数组的最大和](https://leetcode-cn.com/problems/lian-xu-zi-shu-zu-de-zui-da-he-lcof/)
+
+输入一个整型数组，数组里有正数也有负数。数组中的一个或连续多个整数组成一个子数组。求所有子数组的和的最大值。
+
+要求时间复杂度为O(n)。
+
+示例1:
+
+```
+输入: nums = [-2,1,-3,4,-1,2,1,-5,4]
+输出: 6
+解释: 连续子数组 [4,-1,2,1] 的和最大，为 6。
+```
+
+提示：
+
+`1 <= arr.length <= 10^5`
+`-100 <= arr[i] <= 100`
+
+**解答：**<u>动态规划</u> 
+
+dp[i-1]<0 dp[i]=nums[i]; dp[i-1]>=0 dp[i]=nums[i]+dp[i+1]
+
+nums = [-2,1,-3,4,-1,2,1,-5,4]
+
+dp = [-2,1,-2,4,3,5,6,1,5]  
+
+dp[i]表示以nums[i]为结尾的子数组的最大和 
+
+初始化 dp[0] = nums[0]
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        //动态规划 dp[i-1]<0 dp[i]=nums[i]; dp[i-1]>=0 dp[i]=nums[i]+dp[i+1]
+        if(nums.length==0) return 0;
+        int[] dp = new int[nums.length];
+        int res = nums[0];
+        dp[0] = nums[0];
+        for(int i=1;i<nums.length;i++){
+            dp[i] = dp[i-1] < 0 ? nums[i] : nums[i] + dp[i-1];
+            res = res > dp[i] ? res:dp[i];
+        }
+        return res;
+    }
+}
+```
+
+## [剑指 Offer 43. 1～n整数中1出现的次数](https://leetcode-cn.com/problems/1nzheng-shu-zhong-1chu-xian-de-ci-shu-lcof/)
+
+输入一个整数 `n` ，求1～n这n个整数的十进制表示中1出现的次数。
+
+例如，输入12，1～12这些整数中包含1 的数字有1、10、11和12，1一共出现了5次。【11算两次】
+
+**示例 1：**
+
+```
+输入：n = 12
+输出：5
+```
+
+**示例 2：**
+
+```
+输入：n = 13
+输出：6
+```
+
+ **解答：**递归，遍历n中的每个位，1出现的次数-就是每一位上1出现的次数之和， 【如 13】
+
+- cur > 1 时：次数 = $(high+1)* 10^{i-1} $  【1 : cur=3,high=1,low=0,i=1,res+=(1+1)*1=2】
+- cur = 1 时：次数 = $ high * 10^{i-1} + low + 1$  【2：cur=2,high=0,low=3,i=2,res+=0+3+1=4】
+
+- cur = 0 时：次数 = $(high-1+1)*10^{i-1}$
+
+cur : 当前位数值
+
+high : 高位部分数值
+
+low : 低位部分数值
+
+i : 当前cur所在的位次
+
+```java
+class Solution {
+    public int countDigitOne(int n) {
+        int res = 0;
+        int cur = n%10, low = 0, high = n/10;
+        int count = 1;//记录cur现在是第几位 个位/十位…
+        int num = 1;//记录cur现在是第几位 1/2… 
+        //1出现的次数 就是每一位上1出现的次数之和
+        while(low!=n){
+            if(cur>1) res = res + (high+1)*(int)Math.pow(10,num-1); //Math.pow(10,num-1) = count
+            else if(cur==1) res = res + high*(int)Math.pow(10,num-1)+low+1;
+            else res = res + high*(int)Math.pow(10,num-1);
+            //cur向前移动
+            low = low + cur*count;
+            cur = high%10;
+            high = high/10;
+            count = count*10;
+            num++;
+        }
+
+        return res;
+    }
+}
+```
+
+
+
 ## 57.和为s的两个数字
 
 输入一个递增排序的数组和一个数字s，在数组中查找两个数，使得它们的和正好是s。如果有多对数字的和等于s，则输出任意一对即可。
@@ -3856,6 +3966,62 @@ class Solution {
             ret = Math.max(ret, k);
         }
         return ret;
+    }
+}
+```
+
+## [309. 最佳买卖股票时机含冷冻期](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/)
+
+给定一个整数数组，其中第 i 个元素代表了第 i 天的股票价格 。
+
+设计一个算法计算出最大利润。在满足以下约束条件下，你可以尽可能地完成更多的交易（多次买卖一支股票）:
+
+- 你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+- 卖出股票后，你无法在第二天买入股票 (即冷冻期为 1 天)。
+
+示例:
+
+```
+输入: [1,2,3,0,2]
+输出: 3 
+解释: 对应的交易状态为: [买入, 卖出, 冷冻期, 买入, 卖出]
+```
+
+**解答：**<u>动态规划</u>
+
+设置二维数组 dp [prices.length] [3]
+
+dp [i] [0]  // 不持股不卖出
+
+dp [i] [1]  // 持股
+
+dp [i] [2]  // 当天卖出
+
+| 股价                      | 1    | 2               | 3               | 0             | 2             |
+| ------------------------- | ---- | --------------- | --------------- | ------------- | ------------- |
+| dp [i] [0]   不持股不卖出 | 0    | 0               | max(0,1)=1      | max(1,2)=2    | max(2,-1) = 2 |
+| dp [0] [1]  持股          | -1   | max(-2,-1) = -1 | max(-3,-1) = -1 | max(1,-1) = 1 | max(0,1) = 1  |
+| dp [0] [2]  当天卖出      | 0    | 1               | 2               | -1            | 3             |
+
+return  max( dp [4] [0] , dp [4] [2] )
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        if(prices.length==0) return 0;
+        int[][] dp = new int[prices.length][3];
+        dp[0][0] = 0; //不持股不卖出
+        dp[0][1] = -prices[0];  //持股
+        dp[0][2] = 0; //当天卖出
+
+        for(int i=1;i<prices.length;i++){
+            dp[i][0] = Math.max(dp[i-1][0],dp[i-1][2]);  //max(前一天不持股/前一天卖出,今天是冷冻期)
+            dp[i][1] = Math.max(dp[i-1][1],dp[i-1][0]-prices[i]);  //max(前一天已持有/今天买入=昨天dp0-今天股价)
+            dp[i][2] = dp[i-1][1] + prices[i]; //当天卖出
+        }
+
+        return Math.max(dp[prices.length-1][0],dp[prices.length-1][2]);
+
     }
 }
 ```
