--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3332,6 +3332,70 @@ class Solution {
 }
 ```
 
+## [剑指 Offer 44. 数字序列中某一位的数字](https://leetcode-cn.com/problems/shu-zi-xu-lie-zhong-mou-yi-wei-de-shu-zi-lcof/)
+
+数字以0123456789101112131415…的格式序列化到一个字符序列中。在这个序列中，第5位（从下标0开始计数）是5，第13位是1，第19位是4，等等。
+
+请写一个函数，求任意第n位对应的数字。
+
+示例 1：
+
+```
+输入：n = 3
+输出：3
+```
+
+示例 2：
+
+```
+输入：n = 11
+输出：0
+```
+
+限制：
+
+`0 <= n < 2^31`
+
+**解答：** 找规律
+
+| 数字区间               | 0    | 1-9  | 10-99 | 100-999 | $10^{i-1}-9*10^{i-1}$ |
+| ---------------------- | ---- | ---- | ----- | ------- | --------------------- |
+| 该区间数字的位数 i     | 1    | 1    | 2     | 3       | $i$                   |
+| 整个区见所占位数 count | 1i   | 9*1  | 90*2  | 900*3   | $9*10^{i-1}*i$        |
+
+- n=n-1 //删去0这个数字
+- 初始化 i = 1，count = $9*10^{i-1}*i$ = 9
+- if(n>count) //n所在的num在当前count区见之后 则 $n = n- 9*10^{i-1}*i$ ；i++；count更新
+- 当 n<=count 时，即找到n所在的区间，并且n/i=num是当前区间的第几个数，n%i代表该数的第几位
+
+```java
+class Solution {
+    public int findNthDigit(int n) {
+        if(n==0) return 0;
+        n = n - 1; 
+        int i = 1;
+        //一位数字 1-9 共9位;
+        //两位数字 10-99 共90*2位;
+        //三位数字 100-999 共900*3位;
+        // …… i位数字 共9*10^(i-1)*i位
+        long count = 9*(long)Math.pow(10,i-1)*i;
+        while(n>count){
+            n-=count;
+            i++;
+            count = 9 * (long)Math.pow(10,i-1)*i;
+            
+        }
+        //n=n-1;
+        long num = n/i + (long)Math.pow(10,i-1); //第几位+该区间start的数 1/10/100…
+        //System.out.println(num);
+        //char res = String.valueOf(num).charAt(n%(int)i);//该数的第几位
+
+        return (int)String.valueOf(num).charAt(n%(int)i)-(int)('0'); //char转int
+
+    }
+}
+```
+
 
 
 ## 57.和为s的两个数字
