--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3396,6 +3396,82 @@ class Solution {
 }
 ```
 
+## [剑指 Offer 45. 把数组排成最小的数](https://leetcode-cn.com/problems/ba-shu-zu-pai-cheng-zui-xiao-de-shu-lcof/)
+
+输入一个非负整数数组，把数组里所有数字拼接起来排成一个数，打印能拼接出的所有数字中最小的一个。
+
+**示例 1:**
+
+```
+输入: [10,2]
+输出: "102"
+```
+
+**示例 2:**
+
+```
+输入: [3,30,34,5,9]
+输出: "3033459"
+```
+
+ **提示:**
+
+- `0 < nums.length <= 100`
+
+**说明:** 
+
+- 输出结果可能非常大，所以你需要返回一个字符串而不是整数
+- 拼接起来的数字可能会有前导 0，最后结果不需要去掉前导 0
+
+**解答：**
+
+- x+y>y+x  ->   x<y
+- x+y<y+x  ->  x>y ???
+
+```java
+class Solution {
+    public String minNumber(int[] nums) {
+        //nums[]存入strs[]字符数组
+        String[] strs = new String[nums.length];
+        for(int i =0;i<nums.length;i++){
+            strs[i] = String.valueOf(nums[i]);
+        }
+        //自定义排序规则
+        //str1.compareTo(str2) 比较两个字符串大小
+        //Arrays.sort(strs, (x, y) -> (x + y).compareTo(y + x)); //谁在前面的时候小 该数就小 x+y<y+x -> x<y
+
+        //自定义快排
+        fastSort(strs,0,strs.length-1);
+
+        //将排序后的字符数组组成String
+        StringBuilder res = new StringBuilder("");
+        for(String str:strs){
+            res.append(str);
+        }
+
+        return res.toString(); 
+    }
+
+    void fastSort(String[] strs, int l, int r) {
+        if(l >= r) return;
+        int i = l, j = r;
+        String tmp = strs[i];
+        while(i < j) {
+            while((strs[j] + strs[l]).compareTo(strs[l] + strs[j]) >= 0 && i < j) j--;
+            while((strs[i] + strs[l]).compareTo(strs[l] + strs[i]) <= 0 && i < j) i++;
+            tmp = strs[i];
+            strs[i] = strs[j];
+            strs[j] = tmp;
+        }
+        strs[i] = strs[l];
+        strs[l] = tmp;
+        fastSort(strs, l, i - 1);
+        fastSort(strs, i + 1, r);
+    }
+
+}
+```
+
 
 
 ## 57.和为s的两个数字
@@ -4089,6 +4165,89 @@ class Solution {
     }
 }
 ```
+
+## [350. 两个数组的交集 II](https://leetcode-cn.com/problems/intersection-of-two-arrays-ii/)
+
+给定两个数组，编写一个函数来计算它们的交集。
+
+```
+示例 1:
+输入: nums1 = [1,2,2,1], nums2 = [2,2]
+输出: [2,2]
+
+示例 2:
+输入: nums1 = [4,9,5], nums2 = [9,4,9,8,4]
+输出: [4,9]
+```
+
+说明：
+
+输出结果中每个元素出现的次数，应与元素在两个数组中出现的次数一致。
+我们可以不考虑输出结果的顺序。
+
+进阶:
+
+如果给定的数组已经排好序呢？你将如何优化你的算法？
+如果 nums1 的大小比 nums2 小很多，哪种方法更优？
+如果 nums2 的元素存储在磁盘上，磁盘内存是有限的，并且你不能一次加载所有的元素到内存中，你该怎么办？
+
+**解答：**
+
+- 哈希表（数组长度小的进表）
+- 排序后双指针比较（思路同小顶堆）
+
+```java
+class Solution {
+    public int[] intersect(int[] nums1, int[] nums2) {
+        //哈希表
+        // HashMap<Integer,Integer> map = new HashMap<>();
+        // LinkedList<Integer> res = new LinkedList<>();
+        // for(int i=0;i<nums1.length;i++){
+        //     if(map.containsKey(nums1[i])){
+        //         int val = map.get(nums1[i]);
+        //         val++;
+        //         map.put(nums1[i],val);
+
+        //     }else map.put(nums1[i],1);
+        // }
+
+        // for(int j=0;j<nums2.length;j++){
+        //     if(map.containsKey(nums2[j])){
+        //         res.push(nums2[j]);
+        //         int val = map.get(nums2[j]);
+        //         if(val==1) map.remove(nums2[j]);
+        //         else map.put(nums2[j],--val);
+        //     }
+        // }
+        // return res.stream().mapToInt(Integer::valueOf).toArray();
+
+        //小顶堆
+        Queue<Integer> A = new PriorityQueue<Integer>();
+        Queue<Integer> B = new PriorityQueue<Integer>();
+        LinkedList<Integer> res = new LinkedList<>();
+
+        for(int i=0;i<nums1.length;i++){
+            A.offer(nums1[i]);
+        }
+        for(int i=0;i<nums2.length;i++){
+            B.offer(nums2[i]);
+        }
+
+        while(!A.isEmpty()&&!B.isEmpty()){
+            if(A.peek()<B.peek()) A.poll();
+            else if(A.peek()>B.peek()) B.poll();
+            else {
+                res.push(A.poll());
+                B.poll();
+            }
+        }
+
+        return res.stream().mapToInt(Integer::valueOf).toArray();
+    }
+}
+```
+
+
 
 
 
