--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3472,6 +3472,307 @@ class Solution {
 }
 ```
 
+## [剑指 Offer 46. 把数字翻译成字符串](https://leetcode-cn.com/problems/ba-shu-zi-fan-yi-cheng-zi-fu-chuan-lcof/)
+
+给定一个数字，我们按照如下规则把它翻译为字符串：0 翻译成 “a” ，1 翻译成 “b”，……，11 翻译成 “l”，……，25 翻译成 “z”。一个数字可能有多个翻译。请编程实现一个函数，用来计算一个数字有多少种不同的翻译方法。
+
+```
+示例 1:
+
+输入: 12258
+输出: 5
+解释: 12258有5种不同的翻译，分别是"bccfi", "bwfi", "bczi", "mcfi"和"mzi"
+```
+
+**解答：**
+
+动态规划：前`i-1`个字符有`f(i-1)`种翻译，则前`i`个字符串至少也有`f(i-1)`种翻译，当`i`与`i-1`组成的字符串对应的数字属于`[10,25]`，则再加上`f(i-2)`种翻译
+
+- `f[i] = f[i-1] + if(10<=substr(i-1,i)<=25) f[i-2];`
+- `f[i-2] = f[i-1] , f[i-1] = f[i];`
+- 初始状态 `f[-1] = 0; f[0] = 1; f[1] = 1; f[2] = 1 or 2`  //这里i为前i个字符，即str[i-1];
+
+```java
+class Solution {
+    public int translateNum(int num) {
+        //f[i] = f[i-1] + if(<10=substring(i-1,i)<=25) f[i-2];
+        int[] F = new int[3];
+        F[0] = 0; //a
+        F[1] = 1; //b
+        F[2] = 1;  //c 未知
+        String str = String.valueOf(num);
+        if(str.length()<2) return F[str.length()];
+        //从第二个数开始
+        for(int i=1;i<str.length();i++){
+            //后移
+            F[0] = F[1]; //a = b
+            F[1] = F[2]; //b = c
+
+            String temp = str.substring(i-1,i+1);//左闭右开
+            if(temp.compareTo("10")>-1 && temp.compareTo("25")<1){
+                F[2] = F[0]+F[1]; //c = 
+            }
+            else F[2] = F[1];     //c =      
+
+        }
+        return F[2];
+
+    }
+}
+```
+
+## [剑指 Offer 47. 礼物的最大价值](https://leetcode-cn.com/problems/li-wu-de-zui-da-jie-zhi-lcof/)
+
+在一个 m*n 的棋盘的每一格都放有一个礼物，每个礼物都有一定的价值（价值大于 0）。你可以从棋盘的左上角开始拿格子里的礼物，并每次向右或者向下移动一格、直到到达棋盘的右下角。给定一个棋盘及其上面的礼物的价值，请计算你最多能拿到多少价值的礼物？
+
+**示例 1:**
+
+```
+输入: 
+[
+  [1,3,1],
+  [1,5,1],
+  [4,2,1]
+]
+输出: 12
+解释: 路径 1→3→5→2→1 可以拿到最多价值的礼物
+```
+
+**解答：**
+
+1. DFS + 回溯 慢 超时
+
+   ```java
+       //速度很慢的DFS+回溯
+   void getroad(int temp,int i,int j,int[][] grid){
+           
+       temp += grid[i][j];
+       if(i==grid.length-1&&j==grid[0].length-1){
+           if(temp>res) res = temp; //res全局变量
+       }else{
+           if(i+1<grid.length) getroad(temp,i+1,j,grid);
+           if(j+1<grid[0].length) getroad(temp,i,j+1,grid);
+       }
+   }
+   ```
+
+2. 最基础的 动态规划：原矩阵m*n，dp矩阵(mx1) * (nx1)
+
+   `dp[i][j] = Math.max(dp[i-1][j],dp[i][j-1]) + grid[i-1][j-1]`
+
+   优化：int[] dp=int[n+1]，则`dp[j]` = `dp[i-1][j]`的值，`dp[j-1]` = `dp[i][j-1]`的值
+
+   ```java
+   class Solution {
+       public int maxValue(int[][] grid) {     
+           //getroad(0,0,0,grid);
+           //dp
+           //int[][] dp = new int[grid.length+1][grid[0].length+1];
+           //优化 
+           int[] dp = new int[grid[0].length+1];
+           for(int i=1;i<grid.length+1;i++){
+               for(int j=1;j<grid[0].length+1;j++){
+                   dp[j] = Math.max(dp[j],dp[j-1]) + grid[i-1][j-1];
+               }
+           }
+           return dp[grid[0].length];
+       }
+   ```
+
+
+
+
+## [剑指 Offer 48. 最长不含重复字符的子字符串](https://leetcode-cn.com/problems/zui-chang-bu-han-zhong-fu-zi-fu-de-zi-zi-fu-chuan-lcof/)
+
+请从字符串中找出一个最长的不包含重复字符的子字符串，计算该最长子字符串的长度。
+
+```
+示例 1:
+
+输入: "abcabcbb"
+输出: 3 
+解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
+```
+
+```
+示例 2:
+
+输入: "bbbbb"
+输出: 1
+解释: 因为无重复字符的最长子串是 "b"，所以其长度为 1。
+```
+
+```
+示例 3:
+
+输入: "pwwkew"
+输出: 3
+解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
+     请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
+```
+
+**解答:**动态规划/双指针+Set/Hashmap
+
+> Hashmap直接存储（字符，字符最后一次出现的位置index），则长度等于 = i - index（简化）
+
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        char[] chs = s.toCharArray();
+        int[] dp = new int[chs.length+1];
+        //dp[0] = 0;
+        int i=1;
+        int res = 0;
+        int start = 0;
+        Set<Character> set = new HashSet<>(); //set维护一个无重复字符的表
+        while(i<dp.length){
+            //dp 以i结尾的最长子串长度
+            while(set.contains(chs[i-1])){
+                //set包含
+                set.remove(chs[start]);
+                start++;
+            }
+            set.add(chs[i-1]);
+            //dp[i] = i-start; //有重复
+            //dp[i] = dp[i-1]+1;  //无重复
+            res = Math.max(i-start,res);
+            i++;
+
+        }
+
+        return res;
+    }
+```
+
+## [剑指 Offer 49. 丑数](https://leetcode-cn.com/problems/chou-shu-lcof/)
+
+我们把只包含质因子 2、3 和 5 的数称作丑数（Ugly Number）。求按从小到大的顺序的第 n 个丑数。
+
+示例:
+
+```
+输入: n = 10
+输出: 12
+解释: 1, 2, 3, 4, 5, 6, 8, 9, 10, 12 是前 10 个丑数。
+```
+
+说明:  
+
+`1 是丑数。`
+`n 不超过1690。`
+
+**解答：**三指针/优先队列
+
+- 丑数应当是另一个丑数乘以2、3、5的结果，如果我们有一个无限大的丑数的集合nums，它应该是由<u>每一个</u>丑数，再乘以2、3、5得到的
+- 设置三个指针，分别表示已经乘过2、3、5的数，设为d2、d3、d5
+- 则对于i来说，`nums[i] = min(nums[d2]*2, nums[d3]*3, nums[d5]*5); d2/3/5++;` 直到i=n-1
+- 初始化，d2 = 0, d3 = 0, d5 = 0; 最开始丑数集合中只有一个丑数 nums[0]=1，比较`[nums[0]*2, nums[0]*3, nums[0]*4]`，d2满足条件，表明nums[d2]这个数已经乘过2了，d2=d2+1=1，nums[1] = 2；接下来比较 `[nums[1]*2, nums[0]*3, nums[0]*4]`……
+
+```java
+class Solution {
+
+    public int nthUglyNumber(int n) {
+        //设置三个指针，分别表示已经乘过2、3、5的数，设为d2、d3、d5
+        int[] nums = new int[n];
+        nums[0] = 1; 
+        int d2 = 0, d3 = 0, d5 = 0;
+        for(int i=1;i<n;i++){
+            int tmp = Math.min(Math.min(nums[d2]*2,nums[d3]*3),nums[d5]*5);
+            if(tmp==nums[d2]*2) d2++;
+            if(tmp==nums[d3]*3) d3++;
+            if(tmp==nums[d5]*5) d5++;
+            nums[i] = tmp;
+        }
+
+        return nums[n-1];
+    }
+
+}
+```
+
+```java
+class Solution {
+    public int nthUglyNumber(int n) {
+        //优先队列 免比较排序
+        PriorityQueue<Long> queue = new PriorityQueue<>();
+        queue.offer(1L);
+        long cur = 0;
+        while (n != 0) {
+            if (queue.peek() != cur ) {
+                n--;
+                cur = queue.poll();
+                queue.offer(cur * 2);
+                queue.offer(cur * 3);
+                queue.offer(cur * 5);
+            } else {
+                queue.poll();
+            }
+        }
+        return (int) cur;
+    }
+}
+```
+
+
+
+## [35. 搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
+
+给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
+
+你可以假设数组中无重复元素。
+
+```
+示例 1:
+
+输入: [1,3,5,6], 5
+输出: 2
+```
+
+```
+示例 2:
+
+输入: [1,3,5,6], 2
+输出: 1
+```
+
+```
+示例 3:
+
+输入: [1,3,5,6], 7
+输出: 4
+```
+
+```
+示例 4:
+
+输入: [1,3,5,6], 0
+输出: 0
+```
+
+**解答：**二分查找 o(log2N)
+
+```java
+class Solution {
+    public int searchInsert(int[] nums, int target) {
+        
+        int start = 0, last = nums.length-1;
+        while(last>=start){
+            int mid = (start+last)/2;
+            //last = 第一个小于tar的值
+            if(nums[mid]>=target) last = mid-1; 
+            //最终 start 比 last 大 1
+            else start = mid + 1;
+        }
+        return start;
+    }
+
+}
+```
+
+
+
+
+
 
 
 ## 57.和为s的两个数字
@@ -3532,6 +3833,60 @@ class Solution {
        return 0;
    }
    ```
+
+## [96. 不同的二叉搜索树](https://leetcode-cn.com/problems/unique-binary-search-trees/)
+
+给定一个整数 n，求以 1 ... n 为节点组成的二叉搜索树有多少种？
+
+示例:
+
+```
+输入: 3
+输出: 5
+解释:
+给定 n = 3, 一共有 5 种不同结构的二叉搜索树:
+
+   1         3     3      2      1
+    \       /     /      / \      \
+     3     2     1      1   3      2
+    /     /       \                 \
+   2     1         2                 3
+```
+
+**解答：**动态规划：找到对于长度为n的序列，以i为根节点的二叉搜索树的个数
+
+```java
+class Solution {
+    public int numTrees(int n) {
+        //二叉搜索树 左节点<根节点<右节点
+        //F(i,n) 表示 长度为n的序列,以i为根节点的二叉搜索树的个数
+        //G(n) 表示 长度为n的序列 共有多少个二叉搜索树
+        //则有 G(n) = 总和 F(i,n)(i=1~n)
+        //动态递归：F(i,n) = G(i-1)*G(n-i) 
+        //即F(3,7) = G(2)*G(4)
+        //即F(3,7)可以分为[1-2],[4-7],因为只考虑个数 所以以序列[4-7]构成的二叉搜索树的个数==[1-4]
+        //则 G(n) = 总和 G(i-1)*G(n-i) (i=1~n)
+
+        int[] G = new int[n+1];
+        G[0] = 1 ;//空树
+        G[1] = 1; //单节点树
+
+        //G[2] = G[0]*G[1]
+        //G[3] = G[0]*G[2] + G[1]*G[1] + G[2]*G[0]
+        //…
+        //G[n] = G[0]*G[n-1] + G[1]*G[n-2] + … + G[n-1]*G[0]
+        for(int i=2;i<n+1;i++){
+            for(int j=1;j<=i;j++){
+                 G[i] += G[j - 1] * G[i - j];
+            }
+
+        }
+        return G[n];
+         
+    }
+
+}
+```
 
 
 
@@ -3883,6 +4238,46 @@ class Solution {
     }
 }
 ```
+
+## [167. 两数之和 II - 输入有序数组](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)
+
+给定一个已按照升序排列 的有序数组，找到两个数使得它们相加之和等于目标数。
+
+函数应该返回这两个下标值 index1 和 index2，其中 index1 必须小于 index2。
+
+说明:
+
+    返回的下标值（index1 和 index2）不是从零开始的。
+    你可以假设每个输入只对应唯一的答案，而且你不可以重复使用相同的元素。
+
+示例:
+
+输入: numbers = [2, 7, 11, 15], target = 9
+输出: [1,2]
+解释: 2 与 7 之和等于目标数 9 。因此 index1 = 1, index2 = 2 。
+
+**解答：**双指针
+
+- nums[a]+nums[b]>tar，b++
+- nums[a]+nums[b]<tar，a--
+- a始终<b 且该题一定有答案
+
+```java
+class Solution {
+    public int[] twoSum(int[] numbers, int target) {
+        int a = 0, b = numbers.length-1;
+        while((numbers[a]+numbers[b])!=target){
+            int tmp = numbers[a] + numbers[b];
+            if(tmp>target) b--;
+            if(tmp<target) a++;
+        }
+
+        return new int[]{a+1,b+1};
+    }
+}
+```
+
+
 
 
 
@@ -4361,3 +4756,114 @@ HashMap<Integer, Integer> map = new HashMap<>();
 将剩下的键值按升序输出
 
 （键值范围是0~1000，可以直接循环1000次判断是否存在该键值并依次输出到数组）
+
+
+
+## 5465. 子树中标签相同的节点数【7.19微软周赛】
+
+给你一棵树（即，一个连通的无环无向图），这棵树由编号从 `0` 到 `n - 1` 的 n 个节点组成，且恰好有 `n - 1` 条 `edges` 。树的根节点为节点 `0` ，树上的每一个节点都有一个标签，也就是字符串 `labels` 中的一个小写字符（编号为 `i` 的 节点的标签就是 `labels[i]` ）
+
+边数组 `edges` 以 `edges[i] = [ai, bi]` 的形式给出，该格式表示节点 `ai` 和 `bi` 之间存在一条边。
+
+返回一个大小为 *`n`* 的数组，其中 `ans[i]` 表示第 `i` 个节点的子树中与节点 `i` 标签相同的节点数。
+
+树 `T` 中的子树是由 `T` 中的某个节点及其所有后代节点组成的树。
+
+ 
+
+**示例 1：**
+
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2020/07/19/q3e1.jpg)
+
+```
+输入：n = 7, edges = [[0,1],[0,2],[1,4],[1,5],[2,3],[2,6]], labels = "abaedcd"
+输出：[2,1,1,1,1,1,1]
+解释：节点 0 的标签为 'a' ，以 'a' 为根节点的子树中，节点 2 的标签也是 'a' ，因此答案为 2 。注意树中的每个节点都是这棵子树的一部分。
+节点 1 的标签为 'b' ，节点 1 的子树包含节点 1、4 和 5，但是节点 4、5 的标签与节点 1 不同，故而答案为 1（即，该节点本身）。
+```
+
+**示例 2：**
+
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2020/07/19/q3e2.jpg)
+
+```
+输入：n = 4, edges = [[0,1],[1,2],[0,3]], labels = "bbbb"
+输出：[4,2,1,1]
+解释：节点 2 的子树中只有节点 2 ，所以答案为 1 。
+节点 3 的子树中只有节点 3 ，所以答案为 1 。
+节点 1 的子树中包含节点 1 和 2 ，标签都是 'b' ，因此答案为 2 。
+节点 0 的子树中包含节点 0、1、2 和 3，标签都是 'b'，因此答案为 4 。
+```
+
+**示例 3：**
+
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2020/07/19/q3e3.jpg)
+
+```
+输入：n = 5, edges = [[0,1],[0,2],[1,3],[0,4]], labels = "aabab"
+输出：[3,2,1,1,1]
+```
+
+**示例 4：**
+
+```
+输入：n = 6, edges = [[0,1],[0,2],[1,3],[3,4],[4,5]], labels = "cbabaa"
+输出：[1,2,1,1,2,1]
+```
+
+**示例 5：**
+
+```
+输入：n = 7, edges = [[0,1],[1,2],[2,3],[3,4],[4,5],[5,6]], labels = "aaabaaa"
+输出：[6,5,4,1,3,2,1]
+```
+
+**提示：**
+
+- `1 <= n <= 10^5`
+- `edges.length == n - 1`
+- `edges[i].length == 2`
+- `0 <= ai, bi < n`
+- `ai != bi`
+- `labels.length == n`
+- `labels` 仅由小写英文字母组成
+
+**解答:**
+
+```java
+class Solution {
+
+    public int[] countSubTrees(int n, int[][] edges, String labels) {
+        ArrayList<Integer>[] graph = new ArrayList[n];
+        for (int i = 0; i < n; i++) {
+            graph[i] = new ArrayList<>();
+        }
+        for (int[] edge : edges) {
+            graph[edge[0]].add(edge[1]);
+            graph[edge[1]].add(edge[0]);
+        }
+        int[] count = new int[26], sum = new int[n];
+        boolean[] visited = new boolean[n];
+        countSubTrees(0, visited, sum, count, graph, labels);
+        return sum;
+    }
+
+    private void countSubTrees(int index, boolean[] visited, int[] sum, int[] count, ArrayList<Integer>[] graph,
+            String labels) {
+        if (!visited[index]) {
+            visited[index] = true;
+            for (int i : graph[index]) {
+                int[] newCount = new int[26];
+                countSubTrees(i, visited, sum, newCount, graph, labels);
+                for (int j = 0; j < 26; j++) {
+                    count[j] += newCount[j];
+                }
+                sum[index] += newCount[labels.charAt(index) - 'a'];
+            }
+            sum[index]++;
+            count[labels.charAt(index) - 'a']++;
+        }
+    }
+}
+```
+
