--- a/力扣刷题记录.md
+++ b/力扣刷题记录.md
@@ -3715,6 +3715,662 @@ class Solution {
 
 
 
+# [剑指 Offer 20. 表示数值的字符串](https://leetcode-cn.com/problems/biao-shi-shu-zhi-de-zi-fu-chuan-lcof/)
+
+请实现一个函数用来判断字符串是否表示数值（包括整数和小数）。例如，字符串"+100"、"5e2"、"-123"、"3.1416"、"-1E-16"、"0123"都表示数值，但"12e"、"1a3.14"、"1.2.3"、"+-5"及"12e+5.4"都不是。
+
+**解答：**
+
+[沙雕题]
+
+me:
+
+```java
+class Solution {
+    public boolean isNumber(String s) {
+        //存e前后两个字符串
+        int beStart = 0;
+        int beEnd = 0;   
+        int afStart = 0;
+        int afEnd = 0;
+
+        int ePos = 0;
+        int i=0,j=s.length()-1;    
+        //删前后空格    
+        while(s.charAt(i)==' ') {
+            i++;
+            if(i==s.length()) return false;
+        }
+        while(s.charAt(j)==' ') j--;
+        s = s.substring(i,j+1);
+        beStart = 0;
+        afEnd = s.length();
+        for(i=0;i<s.length();i++){
+            if(isEe(s.charAt(i))){
+                if(i==0||i==s.length()-1) return false;
+                ePos = i;
+                break;
+            }
+        }
+
+        beEnd = i;
+        afStart = i+1;
+
+        if(i==s.length()){
+            afStart = s.length();
+            afEnd = s.length();
+        }
+
+        System.out.println(s.substring(beStart,beEnd));
+        System.out.println(s.substring(afStart,afEnd));
+        char[] be = s.substring(beStart,beEnd).toCharArray();
+        char[] af = s.substring(afStart,afEnd).toCharArray();
+        
+        System.out.println("before:"+beforeE(be));
+        System.out.println("after:"+afterE(af));
+        if(beforeE(be)&&afterE(af)) return true;
+
+        return false;
+    }
+
+    boolean beforeE(char[] str){
+        if(str.length==0){
+            System.out.println("null");
+            return true;
+        } 
+        int signNum = 0;
+        int douNum = 0;
+        int start=0;
+        if(isSign(str[start])) start++;
+        for(int i=start;i<str.length;i++){
+            if(isNum(str[i])) continue;
+            if(isDou(str[i])){
+                douNum++;
+                if(douNum>1||str.length==1) return false;
+                continue;
+            }       
+            return false;
+        }
+        return true;
+    }
+
+    boolean afterE(char[] str){
+        if(str.length==0){
+            System.out.println("null");
+            return true;
+        } 
+        int signNum = 0;
+        int start=0;
+        if(isSign(str[0])) start=1;
+        int end = str.length-1;
+        for(int i=start;i<=end;i++){
+            if(isNum(str[i])) continue;
+            return false;
+        }
+        return true;       
+     }   
+
+    boolean isSign(char c){
+        if(c=='+'||c=='-') return true;
+        else return false;
+    }
+
+    boolean isNum(char c){
+        if(c<='9'&&c>='0') return true;
+        else return false;
+    }
+
+    boolean isEe(char c){
+        if(c=='e'||c=='E') return true;
+        else return false;
+    }
+
+    boolean isDou(char c){
+        if(c=='.') return true;
+        else return false;
+    }
+}
+```
+
+
+
+## [剑指 Offer 53 - I. 在排序数组中查找数字 I](https://leetcode-cn.com/problems/zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof/)
+
+统计一个数字在排序数组中出现的次数。
+
+示例 1:
+
+```
+输入: nums = [5,7,7,8,8,10], target = 8
+输出: 2
+```
+
+示例 2:
+
+```
+输入: nums = [5,7,7,8,8,10], target = 6
+输出: 0
+```
+
+限制：
+
+`0 <= 数组长度 <= 50000`
+
+**解答：**二分查找
+
+```java
+class Solution {
+    public int search(int[] nums, int target) {
+        int start = 0, last = nums.length-1;
+        //tar=nums[mid]时 指向右指针
+        //如果nums中存在tar 最终start=last=最小的tar
+        //如果nums中不存在tar:
+        //如果nums[0]>tar,start=last=nums[0]
+        //如果nums[nums.length-1]<tar,start=last=nums[nums.length-1]
+        //else : start=last=大于tar的最小的数
+        while(start<last){
+            int mid = (start+last)/2;
+            if(nums[mid]>=target) last = mid; //相等时取右边界 最终找到最左元素
+            else start = mid+1;
+        }
+        int count=0;
+        while(last>=0&&last<nums.length&&nums[last]==target){
+            count++;
+            last++;
+        }
+        return count;
+    }
+}
+```
+
+## [剑指 Offer 58 - II. 左旋转字符串](https://leetcode-cn.com/problems/zuo-xuan-zhuan-zi-fu-chuan-lcof/)
+
+字符串的左旋转操作是把字符串前面的若干个字符转移到字符串的尾部。请定义一个函数实现字符串左旋转操作的功能。比如，输入字符串"abcdefg"和数字2，该函数将返回左旋转两位得到的结果"cdefgab"。
+
+示例 1：
+
+```
+输入: s = "abcdefg", k = 2
+输出: "cdefgab"
+```
+
+示例 2：
+
+```
+输入: s = "lrloseumgh", k = 6
+输出: "umghlrlose"
+```
+
+限制：
+
+`1 <= k < s.length <= 10000`
+
+**解答：**
+
+```java
+class Solution {
+    public String reverseLeftWords(String s, int n) {
+        //字符串切片
+        //return s.substring(n,s.length())+ s.substring(0,n);
+
+        //三次反转
+        char[] arr = s.toCharArray();
+        reverseStr(arr,0,n-1);  //反转前半部分
+        reverseStr(arr,n,arr.length-1);  //反转后半部分
+        reverseStr(arr,0,arr.length-1);  //全部反转
+        return new String(arr);
+    }
+
+    void reverseStr(char[] arr, int i,int j){
+        while(i<j){
+            char tmp = arr[i];
+            arr[i] = arr[j];
+            arr[j] = tmp;
+            i++;
+            j--;
+        }
+    }
+
+}
+```
+
+
+
+## [剑指 Offer 60. n个骰子的点数](https://leetcode-cn.com/problems/nge-tou-zi-de-dian-shu-lcof/)
+
+把n个骰子扔在地上，所有骰子朝上一面的点数之和为s。输入n，打印出s的所有可能的值出现的概率。
+
+你需要用一个浮点数数组返回答案，其中第 i 个元素代表这 n 个骰子所能掷出的点数集合中第 i 小的那个的概率。
+
+示例 1:
+
+`输入: 1`
+`输出: [0.16667,0.16667,0.16667,0.16667,0.16667,0.16667]`
+
+示例 2:
+
+`输入: 2`
+`输出: [0.02778,0.05556,0.08333,0.11111,0.13889,0.16667,0.13889,0.11111,0.08333,0.05556,0.02778]`
+
+限制：
+
+`1 <= n <= 11`
+
+**解答：**
+
+```java
+class Solution {
+    public double[] twoSum(int n) {
+        int len = n*6-n+1;
+        double[] res = new double[len];
+        double sum = Math.pow(6,n);
+
+        int[][] dp = new int[n+1][6*n+1]; //dp
+        //初始化
+        for(int i = 1;i <= 6;i++){
+            dp[1][i] = 1;
+        }
+        //dp[i][j] : 共i个骰子 投出j点数 = dp[i-1][j-1:j-6] 之和
+        //当j=9时：
+        //第i个骰子投出1 = 共i-1个骰子 投出j-1=8
+        //第i个骰子投出2 = 共i-1个骰子 投出j-2=7
+        //第i个骰子投出3 = 共i-1个骰子 投出j-3=6
+        //第i个骰子投出4 = 共i-1个骰子 投出j-4=5
+        //第i个骰子投出5 = 共i-1个骰子 投出j-5=4
+        //第i个骰子投出6 = 共i-1个骰子 投出j-6=4
+        //则 共i个骰子 投出j=9点数  = 上面之和
+
+        for(int i = 2;i <= n;i++){
+            for(int j = i;j<=6*n;j++){
+                for(int k=1;k<=6;k++){
+                    if(j-k<=0) break;
+                    dp[i][j] += dp[i-1][j-k];
+                }
+            }
+        }
+        int index = n;
+        for(int i=0;i<len;i++){
+            res[i] = dp[n][index]/sum;
+            index++;
+        }
+        
+        return res;
+
+    }
+}
+```
+
+## [剑指 Offer 61. 扑克牌中的顺子](https://leetcode-cn.com/problems/bu-ke-pai-zhong-de-shun-zi-lcof/)
+
+从扑克牌中随机抽5张牌，判断是不是一个顺子，即这5张牌是不是连续的。2～10为数字本身，A为1，J为11，Q为12，K为13，而大、小王为 0 ，可以看成任意数字。A 不能视为 14。
+
+示例 1:
+
+输入: [1,2,3,4,5]
+输出: True
+
+示例 2:
+
+输入: [0,0,1,2,5]
+输出: True
+
+限制：
+
+数组长度为 5 
+
+数组的数取值为 [0, 13] .
+
+**解答：**
+
+```java
+class Solution {
+    public boolean isStraight(int[] nums) {
+        Arrays.sort(nums);
+        int zero = 0;//记录0的个数
+        int a=0,b=0; //两指针 只向相邻元素
+        
+        for(int i=0;i<4;i++){
+            if(nums[i]==0){
+                zero++;
+                continue;
+            }
+            a = nums[i];
+            b = nums[i+1];
+            zero = isAtoB(a,b,zero);
+            if(zero<0) return false;
+        }
+
+        return true;
+    }
+
+    int isAtoB(int a, int b, int zero){
+        if(a==b) return -1;
+        a++;
+        while(a<b){
+            a++;
+            zero--;
+            if(zero<0) return -1;
+        }
+        return zero;
+    }    
+}
+```
+
+```java
+class Solution {
+    public boolean isStraight(int[] nums) {
+        Arrays.sort(nums);
+        //max-min<5
+        int max = 0,min = 14;
+        int start = 0;
+        for(int i=0;i<4;i++){
+            if(nums[i]==0) {
+                start++;
+                continue;
+            }
+            if(nums[i]==nums[i+1]) return false;
+        }
+        return (nums[4]-nums[start])<5 ;
+
+    }
+
+    
+}
+```
+
+## [剑指 Offer 62. 圆圈中最后剩下的数字](https://leetcode-cn.com/problems/yuan-quan-zhong-zui-hou-sheng-xia-de-shu-zi-lcof/)
+
+0,1,,n-1这n个数字排成一个圆圈，从数字0开始，每次从这个圆圈里删除第m个数字。求出这个圆圈里剩下的最后一个数字。
+
+例如，0、1、2、3、4这5个数字组成一个圆圈，从数字0开始每次删除第3个数字，则删除的前4个数字依次是2、0、4、1，因此最后剩下的数字是3。
+
+**示例 1：**
+
+```
+输入: n = 5, m = 3
+输出: 3
+```
+
+**示例 2：**
+
+```
+输入: n = 10, m = 17
+输出: 2
+```
+
+**限制：**
+
+- `1 <= n <= 10^5`
+- `1 <= m <= 10^6`
+
+**解答：**
+
+约瑟夫环 https://blog.csdn.net/u011500062/article/details/72855826
+
+```java
+class Solution {
+    public int lastRemaining(int n, int m) {
+        //f(n,m) = (f(n-1,m)+m)%n 表示n个人 每次杀死第m个人 最后那个人的下标
+        //f(1,m) = 0
+
+        //递归
+        //if(n==1) return 0;
+        //return (lastRemaining(n-1,m)+m)%n ;
+
+        //迭代
+        int res = 0;
+        for(int i=2;i<=n;i++){
+            res = (res+m)%i;
+        }
+        return res;        
+    }
+}
+```
+
+## [剑指 Offer 63. 股票的最大利润](https://leetcode-cn.com/problems/gu-piao-de-zui-da-li-run-lcof/)
+
+假设把某股票的价格按照时间先后顺序存储在数组中，请问买卖该股票一次可能获得的最大利润是多少？
+
+示例 1:
+
+```
+输入: [7,1,5,3,6,4]
+输出: 5
+解释: 在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。
+     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格。
+```
+
+示例 2:
+
+```
+输入: [7,6,4,3,1]
+输出: 0
+解释: 在这种情况下, 没有交易完成, 所以最大利润为 0。
+```
+
+限制：
+
+`0 <= 数组长度 <= 10^5`
+
+**解答：**
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        if(prices.length==0) return 0;
+        //dp[i] = max(price[i]-min_price[i],dp[i-1])
+        int[] dp = new int[prices.length];  //可以直接用res替代
+        dp[0] = 0;
+        int min = prices[0];
+        for(int i=1;i<prices.length;i++){
+            dp[i] = Math.max(prices[i]-min,dp[i-1]);
+            min = Math.min(min,prices[i]);
+        }
+        return dp[prices.length-1];        
+    }
+}
+```
+
+## [剑指 Offer 65. 不用加减乘除做加法](https://leetcode-cn.com/problems/bu-yong-jia-jian-cheng-chu-zuo-jia-fa-lcof/)
+
+写一个函数，求两个整数之和，要求在函数体内不得使用 “+”、“-”、“*”、“/” 四则运算符号。
+
+示例:
+
+```
+输入: a = 1, b = 1
+输出: 2
+```
+
+提示：
+
+`a, b 均可能是负数或 0`
+`结果不会溢出 32 位整数`
+
+**解答：**
+
+```java
+class Solution {
+    public int add(int a, int b) {
+        //sum = a+b = c+n 
+        //c = (a&b)<<1  进位
+        //n = a^b   非进位
+
+        //迭代
+        // while(b!=0){     
+        //     int c = (a&b)<<1;
+        //     a = a^b;
+        //     b = c;
+        // }
+        // return a;
+
+        //递归
+        if(b==0) return a; 
+        //b作为进位 进位为0的时候停止递归
+        return add(a^b,(a&b)<<1);
+
+    }
+}
+```
+
+## [剑指 Offer 66. 构建乘积数组](https://leetcode-cn.com/problems/gou-jian-cheng-ji-shu-zu-lcof/)
+
+给定一个数组 `A[0,1,…,n-1]`，请构建一个数组 `B[0,1,…,n-1]`，其中 `B` 中的元素 `B[i]=A[0]×A[1]×…×A[i-1]×A[i+1]×…×A[n-1]`。不能使用除法。
+
+**示例:**
+
+```
+输入: [1,2,3,4,5]
+输出: [120,60,40,30,24]
+```
+
+**提示：**
+
+- 所有元素乘积之和不会溢出 32 位整数
+- `a.length <= 100000`
+
+**解答：**
+
+暴力法 时间复杂度 o(n^2^) 超出时间限制
+
+分别计算上三角、下三角，再相乘
+
+```java
+class Solution {
+    public int[] constructArr(int[] a) {
+        if(a.length==0) return new int[0];
+        int[] dp1 = new int[a.length];
+        int[] dp2 = new int[a.length];
+
+        //计算上三角
+        dp1[0] = 1;
+        for(int i=1;i<a.length;i++){
+            dp1[i] = dp1[i-1] * a[i-1];
+        }
+//--------------------------------------------
+        //计算下三角
+        dp2[a.length-1] = 1;
+        for(int j=a.length-2;j>=0;j--){
+            dp2[j] = dp2[j+1] * a[j+1];
+        }
+
+        //乘积
+        for(int k=0;k<a.length;k++){
+            dp1[k] *= dp2[k];
+        }
+
+        return dp1;
+//--------------------------------------------
+//简化写法：
+        //int tmp = 1;
+        //for(int j=a.length-1;j>=0;j--){
+            //dp1[j] = dp1[j] * tmp;
+            //tmp = tmp * a[j];
+
+        //}
+        //return dp1;
+    }
+}
+```
+
+## [剑指 Offer 68 - II. 二叉树的最近公共祖先](https://leetcode-cn.com/problems/er-cha-shu-de-zui-jin-gong-gong-zu-xian-lcof/)
+
+给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个结点 p、q，最近公共祖先表示为一个结点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+例如，给定如下二叉树:  root = [3,5,1,6,2,0,8,null,null,7,4]
+
+![image-20200908154452327](https://gitee.com/sparkle_zz/markdown-pics/raw/master/image-20200908154452327.png)
+
+示例 1:
+
+输入: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 1
+输出: 3
+解释: 节点 5 和节点 1 的最近公共祖先是节点 3。
+
+示例 2:
+
+输入: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 4
+输出: 5
+解释: 节点 5 和节点 4 的最近公共祖先是节点 5。因为根据定义最近公共祖先节点可以为节点本身。
+
+说明:
+
+`所有节点的值都是唯一的。`
+`p、q 为不同节点且均存在于给定的二叉树中。`
+
+**解答：**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    Stack<TreeNode> pAncestor = new Stack<>(); //存储路径
+    Stack<TreeNode> qAncestor = new Stack<>();
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        boolean pres = getAncestors(root,p,pAncestor);
+        boolean qres = getAncestors(root,q,qAncestor);
+
+        TreeNode res = new TreeNode(0);
+        //比较路径
+   		while(!pAncestor.empty()&&!qAncestor.empty()&&pAncestor.peek().val==qAncestor.peek().val){
+            res = pAncestor.pop();
+            qAncestor.pop();
+        }
+        return res;
+
+    }
+    //先序遍历得到路径 最后进栈为根节点
+    boolean getAncestors(TreeNode root, TreeNode x,Stack Ancestor){
+        if(root==null) return false;
+        if(root.val==x.val){
+            Ancestor.add(root);
+            return true;
+        }
+        else{
+            if(getAncestors(root.left,x,Ancestor)){
+                Ancestor.add(root);
+                return true;
+            };
+            if(getAncestors(root.right,x,Ancestor)){
+                Ancestor.add(root);
+                return true;
+            };
+        }
+        return false;        
+    }
+
+}
+```
+
+//递归
+
+```java
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        
+        //递归
+        if(root==null) return null;
+        if(root==p||root==q) return root;
+        TreeNode left = lowestCommonAncestor(root.left,p,q);
+        TreeNode right = lowestCommonAncestor(root.right,p,q);
+        if(left != null && right !=null) return root;
+        if(left==null) return right;
+        if(right==null) return left;
+
+        return null;  
+    }
+```
+
+
+
 ## [35. 搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
@@ -3833,6 +4489,101 @@ class Solution {
        return 0;
    }
    ```
+
+## [95. 不同的二叉搜索树 II](https://leetcode-cn.com/problems/unique-binary-search-trees-ii/)
+
+给定一个整数 n，生成所有由 1 ... n 为节点所组成的 二叉搜索树 。
+
+示例：
+
+```
+输入：3
+输出：
+[
+  [1,null,3,2],
+  [3,2,null,1],
+  [3,1,null,null,2],
+  [2,1,3],
+  [1,null,2,null,3]
+]
+解释：
+以上的输出对应以下 5 种不同结构的二叉搜索树：
+
+   1         3     3      2      1
+    \       /     /      / \      \
+     3     2     1      1   3      2
+    /     /       \                 \
+   2     1         2                 3
+```
+
+**解答：**递归
+
+- List 里面只存储头节点，只将所有情况的头节点存入即可
+- 根节点为1，2，…，n
+- 当 i 为根节点时，构造左子树（start,i-1）,右子树（i+1,last）
+- 继续递归左子树（start,i-1），右子树（i+1,last）,返回存储左右子树头节点的List
+- 则 i 为根节点时，构造出的不同的二叉搜索树的数量为 size(leftList) * size(rightList)
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public List<TreeNode> generateTrees(int n) {
+        if(n==0) return new LinkedList<TreeNode>();
+        return getTreeNode(1,n);
+    }
+
+    List<TreeNode> getTreeNode(int start, int last){  
+        List<TreeNode> res =  new LinkedList<TreeNode>();
+
+        //这里不能等于 
+        //相等时getTreeNode(1,1)指左子树只有一个节点(1)
+        //getTreeNode(n,n)指右子树只有一个节点(n)
+        if(last<start){ 
+            res.add(null);
+            return res;
+        }
+
+
+        for(int i = start;i <= last;i++){
+            List<TreeNode> lefttree = getTreeNode(start,i-1);
+            List<TreeNode> righttree = getTreeNode(i+1,last);
+
+            for(TreeNode l : lefttree){
+                for(TreeNode r : righttree){
+                    TreeNode head = new TreeNode(i);
+                    head.left = l;
+                    head.right = r;
+                    res.add(head);
+                }
+            }
+            
+        }
+        return res;
+
+
+    }
+}
+```
+
+
+
+
+
+
 
 ## [96. 不同的二叉搜索树](https://leetcode-cn.com/problems/unique-binary-search-trees/)
 
